[gd_scene load_steps=5 format=3 uid="uid://dwpumkxiqyve"]

[ext_resource type="Script" uid="uid://blu13ijuxmqui" path="res://scripts/game_hud.gd" id="1_q4g6c"]
[ext_resource type="Script" uid="uid://dtynytd8kyoka" path="res://scripts/ui/dialogue_panel.gd" id="2_n64bn"]
[ext_resource type="PackedScene" uid="uid://jlbfdqrygg3h" path="res://scenes/quest_debug_panel.tscn" id="3_gjmhc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 0.45)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.2)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_q4g6c")

[node name="UIRoot" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UsernamePanel" type="HBoxContainer" parent="UIRoot"]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 31.0

[node name="UsernameLabel" type="Label" parent="UIRoot/UsernamePanel"]
layout_mode = 2
text = "Name:"

[node name="UsernameInput" type="LineEdit" parent="UIRoot/UsernamePanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="UsernameConfirmButton" type="Button" parent="UIRoot/UsernamePanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Set"

[node name="ChatPanel" type="VBoxContainer" parent="UIRoot"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.333
anchor_bottom = 1.0
offset_top = -255.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChatBG" type="Panel" parent="UIRoot/ChatPanel"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ChatScroll" type="ScrollContainer" parent="UIRoot/ChatPanel/ChatBG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatLog" type="RichTextLabel" parent="UIRoot/ChatPanel/ChatBG/ChatScroll"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
fit_content = true

[node name="ChatInputRow" type="HBoxContainer" parent="UIRoot/ChatPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 0

[node name="ChatInput" type="LineEdit" parent="UIRoot/ChatPanel/ChatInputRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Press \"Enter\" to chat or \"/\" for a list of commands."

[node name="ChatSendButton" type="Button" parent="UIRoot/ChatPanel/ChatInputRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"

[node name="Panel" type="Panel" parent="UIRoot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 1.0
anchor_right = 0.666
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="DialoguePanel" type="VBoxContainer" parent="UIRoot/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_n64bn")

[node name="Name" type="Label" parent="UIRoot/Panel/DialoguePanel"]
layout_mode = 2

[node name="DialogueText" type="RichTextLabel" parent="UIRoot/Panel/DialoguePanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="OptionsContainer" type="VBoxContainer" parent="UIRoot/Panel/DialoguePanel"]
layout_mode = 2

[node name="QuestDebugPanel" parent="UIRoot" instance=ExtResource("3_gjmhc")]
layout_mode = 0
